--- a/infra/docker/php/Dockerfile
+++ b/infra/docker/php/Dockerfile
@@ -28,4 +28,6 @@ RUN set -eux; \
 COPY ./infra/docker/php/php-fpm.d/zzz-www.conf /usr/local/etc/php-fpm.d/zzz-www.conf
 COPY ./infra/docker/php/php.ini /usr/local/etc/php/php.ini
 
+COPY --chown=www-data:www-data ./backend /work/backend
+
 WORKDIR /work/backend
