--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-
+      - feature/push_images_to_ecr
 env:
   AWS_REGION: ap-northeast-1
   IMAGE_TAG: ${{ github.sha }}
@@ -53,7 +53,7 @@ jobs:
 
 
 
-      
+
         run: echo "ENV_NAME=prod" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
