--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - run: docker-compose up -d --build app web
+      - run: docker compose up -d --build app web
 
       - name: Cache composer
         id: cache-composer
@@ -67,7 +67,7 @@ jobs:
           path: backend/vendor
           key: composer-v1-${{ hashFiles('backend/composer.lock') }}
 
-      - run: docker-compose exec -T app composer install -n --prefer-dist --no-dev
+      - run: docker compose exec -T app composer install -n --prefer-dist --no-dev
         if: ${{ !steps.cache-composer.outputs.cache-hit }}
 
       - name: Cache npm
@@ -77,10 +77,10 @@ jobs:
           path: backend/node_modules
           key: npm-v1-${{ hashFiles('backend/package-lock.json') }}
 
-      - run: docker-compose exec -T web npm ci
+      - run: docker compose exec -T web npm ci
         if: ${{ !steps.cache-npm-ci.outputs.cache-hit }}
 
-      - run: docker-compose exec -T web npm run prod
+      - run: docker compose exec -T web npm run prod
 
       - uses: aws-actions/amazon-ecr-login@v1
         id: amazon-ecr-login
